# hacklab-status-screen

./: .xbindkeysrc  .xinitrc  Cargo.toml  README.md  autoscroll  config.toml  gamepad_a  gamepad_b  gamepad_down  gamepad_left  gamepad_right  gamepad_select  gamepad_start  gamepad_up  gamepad_x  gamepad_y  index.html  left-click  life.sh  middle-click  prune-erroneous-output  reload-page  right-click  scroll-down  scroll-up  stay-here-longer  tab-left  tab-right  timetable-server-proxy  x.service
root/: traffic-shaping
src/: config.rs  input.rs  main.rs  output.rs
under-construction/: index.html
voron-status/: index.html  style.css
xkcd-status/: index.html  main.py
